<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="rhizome_main_appname">Serval Share Files</string>
        <string name="rhizome_list_appname">Serval Find Shared Files</string>
        <string name="rhizome_saved_appname">Serval Saved Files</string>
        <string name="rhizome_share_file_intent_action">org.servalproject.rhizome.ADD_FILE</string>
        <string name="rhizome_share_file_permission_label">Add files to Rhizome</string>
        <string name="rhizome_share_file_permission_description">Add files via the Serval Mesh using Rhizome</string>
        <string name="rhizome_receive_file_intent_action">org.servalproject.rhizome.RECEIVE_FILE</string>
        <string name="rhizome_receive_file_permission_label">Receive files from Rhizome</string>
        <string name="rhizome_receive_file_permission_description">Receive files via the Serval Mesh using Rhizome</string>
 		<string name="rhizome_share_file_toast">File shared via Serval Mesh</string>
        <string name="rhizome_header">Share Files</string>
        <string name="share_button">Share</string>
        <string name="sent_button">Sent</string>
        <string name="find_button">Find</string>
        <string name="saved_button">Saved</string>
        <string name="storage_settings">Free Space on External Storage</string>
        <string name="storage_label">Storage Used</string>
        <string name="share_app_button">Share Serval App</string>
        <string name="no_button">Cancel</string>
        <string name="m_import">Import</string>
        <string name="m_new_keys">KeyGen</string>
        <string name="m_reinit_list">Reinit. excl. list</string>
        <string name="rrcm_export">Export</string>
        <string name="rrcm_delete">Delete</string>
        <string name="rrcm_mark">Mark for expiration</string>
        <string name="rrcm_vcert">View Manifest</string>
        <string name="pick_file">Pick File</string>
        <string name="pick_folder">Pick Folder</string>
        <string name="me_fill"></string>
        <string name="me_validate_fill">Publish the manifest</string>
        <string name="me_author_fill">Author:</string>
        <string name="me_version_fill">Version:</string>
        <string name="me_name">Create the manifest</string>
        <string name="mv_name_p">File name: </string>
        <string name="mv_size_p">Size:</string>
        <string name="mv_author_p">Author:</string>
        <string name="mv_date_p">Creation ts:</string>
        <string name="mv_version_p">Version:</string>
        <string name="mv_hash_p">Hash:</string>
        <string name="mv_hash_ok_p">Hash ok?</string>
        <string name="mv_sign_ok_p">Cert sign?</string>
        <string name="mv_back">Back</string>
        <string name="mv_name">View the manifest</string>
        <string name="rrcm_certify">Sign/Publish file with my key</string>
        <string name="sf_name">Share via Mesh</string>
    <string name="header">Serval Project</string>
    <string name="logoid">Serval Project Logo</string>
    <string name="url">servalproject.org</string>
    <string name="warning1">EXPERIMENTAL</string>
    <string name="warning2">SOFTWARE</string>
    <string name="affirm">YES</string>
    <string name="deny">NO</string>
	<string name="app_name">Serval Mesh</string>
	<string name="agree">I agree</string>
	<string name="cancel">Cancel</string>
	<string name="wifiJammed">Wifi Issue</string>
    <string name="maincall">Make a call via the Serval Mesh</string>
    <string name="mainmsg">Send a message via the Serval Mesh</string>
	<string name="mainreset">Reset your phone number</string>
	<string name="maintoggle">Suspend or start Serval services</string>
	<string name="callLabel">Call</string>
    <string name="messageLabel">Messages</string>
    <string name="contactsLabel">Contacts</string>
    <string name="mapsLabel">Maps</string>
    <string name="sharingLabel">Share Files</string>
    <string name="servalLabel">Share Us</string>
    <string name="settingsLabel">Settings</string>
    <string name="powerLabel">Power</string>
    <string name="helpLabel">Help</string>
    <string name="state_power_on">Switch OFF</string>
    <string name="state_power_off">Switch ON</string>
    <string name="state_installing">Installing&#8230;</string>
    <string name="state_upgrading">Upgrading&#8230;</string>
    <string name="state_starting">Starting&#8230;</string>
    <string name="state_stopping">Stopping&#8230;</string>
    <string name="state_broken">Broken!</string>
	<string name="pairLabel">Pair</string>
	<string name="search">Search</string>
	<string name="btnwizard">SETUP WIZARD</string>
	<string name="btnmsg">SEND A MESSAGE</string>
	<string name="btncall">MAKE A CALL</string>
	<string name="btnreset">RESET</string>
	<string name="btnPhOk">OK</string>
	<string name="btnok">OK</string>
	<string name="patience">Please wait&#8230;</string>
	<string name="settings_wifiMode">Wifi Mode</string>
	<string name="settings_cycleMode">Automatic Mode Cycling</string>
	<string name="settings_wifiControl">Enable automatic control of the wifi mode</string>
	<string name="settings_wifiSettings">Wifi Settings</string>
	<string name="settings_deviceChipset">Device Chipset</string>
	<string name="settings_chipsetDefault">Automatic</string>
	<string name="settings_changeSSID">Change SSID</string>
	<string name="settings_networkName">Network name</string>
	<string name="settings_enterSSID">Enter SSID</string>
	<string name="settings_ssidprefDefault">ServalBabyMonitor-</string>
	<string name="settings_alphaNumeric">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
	<string name="settings_changeChannel">Change Channel</string>
	<string name="settings_wirelessFreq">Wireless frequency channel</string>
	<string name="settings_selectChannel">Select Channel</string>
	<string name="settings_transmitPower">Transmit Power</string>
	<string name="settings_reduceTransmit">Reduce transmit power</string>
	<string name="settings_reducePower">Reduce Power</string>
	<string name="settings_powerprefDisabled">Disabled</string>
	<string name="settings_networkAddress">Network Address</string>
	<string name="settings_selectIP">Select IP and subnet size</string>
	<string name="settings_formABC">Must be of the form A.B.C.D/E. Only digits, \'.\' and \'/\' allowed.</string>
	<string name="settings_flightOptions">Power Saving - Flight Mode</string>
	<string name="settings_flightMode">Select which radios can be turned back on while in flight mode (WARNING - do not use while flying).</string>
    <string name="settings_allowBluetooth">Allow BlueTooth</string>
    <string name="settings_needReboot">(Requires Reboot)</string>
    <string name="settings_allowWifi">Allow WiFi</string>
	<string name="start1">Serval software is mesh network software designed for use where there is no existing infrastructure.</string>
    <string name="start2">To configure your phone for first time use, please use the Setup Wizard.</string>
    <string name="welcome">Welcome to the Serval Mesh.</string>
    <string name="setphone">Enter Phone No.</string>
    <string name="setname">Display Name.</string>
    <string name="statusstar">Status Indicator</string>
	<string name="aboutTitle">About</string>
	<string name="aboutUs">The Serval Project is a humanitarian effort to make mobile phones useful without cellular networks so that people have the best chance\n
of communicating, without cost, wherever they are, and even when disaster strikes. Our work depends on donations and philanthropic support.</string>
	<string name="svisitUs">For more information, \n visit our website -</string>
	<string name="saboutContact">You can contact us via email -</string>
	<string name="emailEnquiries">enquiry@servalproject.org</string>
    <string name="splease_help">If you like this application, then please consider a donation.</string>
	<string name="donateTitle">Make a Donation</string>
	<string name="donateButton">Donate via PayPal</string>
	<string name="swhy_donate">By donating you provide support to continue development of this software.</string>
    <string name="sthanks">Thank you!</string>
    <string name="scontactUs">You can also contact us via the website -</string>
    <string name="selseEmail">or via email -</string>
    <string name="securityWarning">This version of the Serval Mesh Software currently contains no security.</string>
	<string name="securityFuture">Upcoming releases will contain strong security options.</string>
	<string name="securityContact">For more information, feel free to contact us</string>
    <string name="instrtitle">Setup Instructions</string>
 	<string name="instr1">You will be asked to enter a phone number.\n This can be any number you like, with these exceptions \:</string>
    <string name="exception1">* It cannot start with \'11\'</string>
    <string name="exception2">* It has to have 5 or more digits.</string>
    <string name="instr2">Once this has been done, press ok.\n You will be taken to the main screen.</string>
    <string name="instrmenuhint">The menu can be accessed via your phones menu key.\n Please refer to your handsets instructions.</string>
    <string name="phoneInstr">Please enter your phone number \: \n remember, do not start it with \'11\', \nand it requires more than 5 digits.</string>
    <string name="setuptext">Settings</string>
    <string name="abouttext">About</string>
    <string name="rhizometext">Rhizome</string>
    <string name="help_calls">Make calls via Serval Mesh</string>
    <string name="help_messages">Send messages via Serval Mesh</string>
    <string name="help_contacts">Add contacts to Address Book</string>
    <string name="help_rhizome">Share files on the Serval Mesh</string>
    <string name="help_share">Share our software with other people</string>
    <string name="help_settings">Settings for Serval Mesh application</string>
    <string name="help_power">Start and stop Serval Mesh processes</string>
    <string name="help_help">Guides, links, information</string>
    <string name="helpguide_header">Guide to Interface</string>
	<string name="servalhomeurl">http://servalproject.org</string>
	<string name="licencetitle">License</string>
	<string name="licencetype">GNU General Public License(GPL) v3</string>
	<string name="licenceurl">http://www.gnu.org/licenses/gpl.html</string>
	<string name="call_button1">Number 1</string>
	<string name="call_button2">Number 2</string>
	<string name="call_button3">Number 3</string>
	<string name="call_button4">Number 4</string>
	<string name="call_button5">Number 5</string>
	<string name="call_button6">Number 6</string>
	<string name="call_button7">Number 7</string>
	<string name="call_button8">Number 8</string>
	<string name="call_button9">Number 9</string>
	<string name="call_button0">Number 0</string>
	<string name="call_buttonstar">Star</string>
	<string name="call_buttonpound">Pound</string>
	<string name="dragon">HERE BE DRAGONS!</string>
	<string name="emptor">\n\n
This software is a DEVELOPER PROTOTYPE release to help community
developers to help us to improve this software.
\n\n
It is NOT INTENDED FOR PUBLIC USE.  It has LOTS OF BUGS. It might
FLATTEN YOUR BATTERY or INTERFERE WITH NORMAL OPERATION of your phone.
\n\n
It is NOT FIT FOR MERCHANTABILITY FOR ANY PURPOSE and CARRIES NO
WARRANTY, IMPLIED OR OTHERWISE.
\n\n
It is however loads of fun to use to discover the potential of free
and open mesh telephony.
\n\n
If you are not a developer, you are of course welcome to try it out,
and let us know of any problems you find, and that would be great. But
please do not rely on it at this time, and certainly dont use it to
replace any reliable means of communication.
\n\n
You must acknowledge that you use this software entirely at your own risk.</string>
	<string name="main_menu_show_log">Show Log</string>
	<string name="main_menu_set_number">Set Number</string>
	<string name="main_menu_redetect_wifi">Redetect WIFI</string>
</resources>