<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2011 The Serval Project
 * 
 * This file is part of Serval Software (http://www.servalproject.org)
 * 
 * Serval Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 -->
    
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
     <!-- Header -->

     <ImageView
         android:id="@+id/logot_image"
         android:contentDescription="@string/logoid"
         style="@style/slogo" />

     <TextView
         android:id="@+id/header"
         style="@style/sheader"
         android:layout_alignTop="@+id/logot_image"
         android:layout_toRightOf="@+id/logot_image"
         android:text="@string/header" />

     <TextView
         android:id="@+id/url"
         style="@style/surl"
         android:layout_alignBottom="@+id/logot_image"
         android:layout_alignLeft="@+id/header"
         android:text="@string/url" />
     
     <TextView
         android:id="@+id/warning1"
         style="@style/swarning1"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:text="@string/warning1" />

     <TextView
         android:id="@+id/warning2"
         style="@style/swarning2"
         android:layout_alignRight="@+id/warning1"
         android:layout_below="@+id/warning1"
         android:text="@string/warning2" />
     <!-- Body -->
              
     <TextView android:id="@+id/instrtitle"
    		  android:text="@string/instrtitle"	     
              android:layout_below="@+id/url" 
              style="@style/stitle" />  

    <TextView android:id="@+id/instr1"
              android:text="@string/instr1"
   		      android:layout_below="@+id/instrtitle"
              style="@style/stextleftsmall" /> 
              
    <TextView android:id="@+id/exception1"
              android:text="@string/exception1"
   		      android:layout_below="@+id/instr1"
              style="@style/stextleftsmall"  />   
                
    <TextView android:id="@+id/exception2"
              android:text="@string/exception2"
   		      android:layout_below="@+id/exception1"
              style="@style/stextleftsmall"  />   
   			  
    <TextView android:id="@+id/instr2"
              android:text="@string/instr2"
   		      android:layout_below="@+id/exception2"
              style="@style/stextleftsmall" />   
                  
    <TextView android:id="@+id/instrmenuhint"
              android:text="@string/instrmenuhint"
   		      android:layout_below="@+id/instr2"
              style="@style/stextleftsmall" /> 
      
              
 <!-- Footer -->     	  
        	  
	<Button style="@style/sbtnwizard" 
			android:id="@+id/btnInstr" 
			android:text="@string/btnok" 
			android:layout_below="@+id/instrmenuhint" /> 

</RelativeLayout>