 <merge xmlns:android="http://schemas.android.com/apk/res/android">   
            
	<TableLayout 
	    android:id="@+id/dialpad"
        style="@style/sdtmf_dialpadTable" >
	    
		<TableRow android:id="@+id/dialpad_row1"
            style="@style/sdtmf_dialpadTableRow" >
                    
            <ImageButton
                android:id="@+id/one"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button1"
                android:src="@drawable/dial_num_1_no_vm" />
            
			<ImageButton
                android:id="@+id/two"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button2"
                android:src="@drawable/dial_num_2" />

            <ImageButton
                android:id="@+id/three"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button3"
                android:src="@drawable/dial_num_3" />
            
        </TableRow>
                
		<TableRow android:id="@+id/dialpad_row2"
        	style="@style/sdtmf_dialpadTableRow" > 
     
           <ImageButton
                android:id="@+id/four"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button4"
                android:src="@drawable/dial_num_4" />

            <ImageButton
                android:id="@+id/five"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button5"
                android:src="@drawable/dial_num_5" />
            
			<ImageButton
                android:id="@+id/six"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button6"
                android:src="@drawable/dial_num_6" />   
                
        </TableRow>
                
		<TableRow android:id="@+id/dialpad_row3"
            style="@style/sdtmf_dialpadTableRow" >
               
          <ImageButton
                android:id="@+id/seven"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button7"
                android:src="@drawable/dial_num_7" /> 
                
          <ImageButton
                android:id="@+id/eight"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button8"
                android:src="@drawable/dial_num_8" />
           

            <ImageButton
                android:id="@+id/nine"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button9"
                android:src="@drawable/dial_num_9" />
            
		</TableRow>   
           
		<TableRow android:id="@+id/dialpad_row4"
            style="@style/sdtmf_dialpadTableRow" >
               
           <ImageButton
                android:id="@+id/star"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_buttonstar"
                android:src="@drawable/dial_num_star" />
               
            <ImageButton
                android:id="@+id/zero"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_button0"
                android:src="@drawable/dial_num_0" />

			<ImageButton
                android:id="@+id/pound"
                style="@style/sdtmf_dialpadImage"
                android:contentDescription="@string/call_buttonpound"
                android:src="@drawable/dial_num_pound" /> 
               
		</TableRow>
               
	</TableLayout>
	
</merge>
