
 <!-- Header -->
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android">      

     <ImageView
         android:id="@+id/logot_image"
         style="@style/slogo"
         android:contentDescription="@string/logoid" />

     <TextView
         android:id="@+id/header"
         style="@style/sheader"
         android:layout_alignTop="@+id/logot_image"
         android:layout_toRightOf="@+id/logot_image"
         android:text="@string/header" />

     <TextView
         android:id="@+id/url"
         style="@style/surl"
         android:layout_alignBottom="@+id/logot_image"
         android:layout_alignLeft="@+id/header"
         android:text="@string/url" />

     <TextView
         android:id="@+id/warning1"
         style="@style/swarning1"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="@string/warning1" />

     <TextView
         android:id="@+id/warning2"
         style="@style/swarning2"
         android:layout_alignRight="@+id/warning1"
         android:layout_below="@+id/warning1"
         android:text="@string/warning2" />
</merge>
     