<?xml version="1.0" encoding="utf-8"?>
    
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent">
       <!-- Header -->		
    
    <ImageView 	android:id="@+id/logot_image"
   			    style="@style/slogo"/> 

    <TextView android:id="@+id/header"
              android:text="@string/header"
              style="@style/sheader" /> 

    <TextView android:id="@+id/url"
    		  android:text="@string/url"	  
              android:layout_below="@+id/header" 
              style="@style/surl"/> 
    
    <!-- Body -->
              
     <TextView android:id="@+id/welcome"
    		  android:text="@string/welcome"	     
              android:layout_below="@+id/url" 
              style="@style/stitle" />  
   			  
    <TextView android:id="@+id/start1"
              android:text="@string/start1"
   		      android:layout_below="@+id/welcome"
              style="@style/stextleft" />  
  
    <TextView android:id="@+id/start2"
              android:text="@string/start2"
   		      android:layout_below="@+id/start1"
              style="@style/stextsmall" /> 
                  
    
    <Button android:id="@+id/btnwizard"
			android:text="@string/btnwizard"
			android:layout_below="@+id/start2"
            style="@style/sbtnwizard" /> 
      
 <!-- Footer -->     	  
        	  
	<TextView android:id="@+id/warning"
		      android:layout_below="@+id/btnwizard"
        	  android:text="@string/warning" 
        	  style="@style/swarning"/> 

</RelativeLayout>