<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2011 The Serval Project
 * 
 * This file is part of Serval Software (http://www.servalproject.org)
 * 
 * Serval Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 -->
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent" >

          <!-- Header -->

          <include
              android:id="@+id/headerLayout"
              layout="@layout/header_layout" />
          
          <!-- Body -->
			<ScrollView android:id="@+id/scrollViewHelp" 
					style="@style/saboutscroll"
					android:fillViewport="true" >

    		<RelativeLayout
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content" >
    		   
    		    <TextView
    		        android:id="@+id/helpguide_header"
    		        style="@style/shelp_header"
    		        android:layout_above="@+id/messageLabel"
    		        android:layout_centerHorizontal="true"
    		        android:text="@string/helpguide_header" />		    

    		    <TextView
    		        android:id="@+id/callLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_alignBaseline="@+id/help_calls"
    		        android:layout_alignBottom="@+id/help_calls"
    		        android:layout_alignRight="@+id/helpLabel"
    		        android:text="@string/callLabel" />
    		    
    		    <TextView
    		        android:id="@+id/help_calls"
    		        style="@style/sabouthelp"
    		        android:layout_alignParentRight="true"
    		        android:layout_alignParentTop="true"
    		        android:layout_marginTop="80dp"
    		        android:text="@string/help_calls" />

    		    <TextView
    		        android:id="@+id/contactsLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_above="@+id/mapsLabel"
    		        android:layout_alignLeft="@+id/mapsLabel"
    		        android:text="@string/contactsLabel" />

    		    <TextView
    		        android:id="@+id/help_contacts"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/contactsLabel"
    		        android:layout_alignBottom="@+id/contactsLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_contacts" />
    		    
    		    <TextView
    		        android:id="@+id/messageLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_alignBaseline="@+id/help_messages"
    		        android:layout_alignBottom="@+id/help_messages"
    		        android:layout_alignRight="@+id/sharingLabel"
    		        android:text="@string/messageLabel" />
      		    
    		    
    		    <TextView
    		        android:id="@+id/help_messages"
    		        style="@style/sabouthelp"
    		        android:layout_alignRight="@+id/help_calls"
    		        android:layout_below="@+id/help_calls"
    		        android:text="@string/help_messages" />
<!-- Maps help commented until implemented. Change relative layouts for Sharing Help back when this is done. -->
    		  <!--     		    		    
    		    <TextView
    		        android:id="@+id/mapsLabel"
    		        style="@style/saboutheader_help"
    		        android:text="@string/mapsLabel" />
				<TextView
    		        android:id="@+id/help_maps"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/mapsLabel"
    		        android:layout_alignBottom="@+id/mapsLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_maps" /> -->  

    		    <TextView
    		        android:id="@+id/sharingLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_below="@+id/messageLabel"
    		        android:text="@string/sharingLabel" />

    		    <TextView
    		        android:id="@+id/help_rhizome"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/sharingLabel"
    		        android:layout_alignBottom="@+id/sharingLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_rhizome" />

    		    <TextView
    		        android:id="@+id/servalLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_below="@+id/help_rhizome"
    		        android:text="@string/servalLabel" />

    		    <TextView
    		        android:id="@+id/help_share"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/servalLabel"
    		        android:layout_alignBottom="@+id/servalLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_share" />

    		    <TextView
    		        android:id="@+id/settingsLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_below="@+id/help_share"
    		        android:text="@string/settingsLabel" />

    		    <TextView
    		        android:id="@+id/help_settings"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/settingsLabel"
    		        android:layout_alignBottom="@+id/settingsLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_settings" />

    		    <TextView
    		        android:id="@+id/powerLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_below="@+id/help_settings"
    		        android:text="@string/powerLabel" />

    		    <TextView
    		        android:id="@+id/help_power"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/powerLabel"
    		        android:layout_alignBottom="@+id/powerLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_power" />

    		    <TextView
    		        android:id="@+id/helpLabel"
    		        style="@style/saboutheader_help"
    		        android:layout_below="@+id/help_power"
    		        android:text="@string/helpLabel" />

    		    <TextView
    		        android:id="@+id/help_help"
    		        style="@style/sabouthelp"
    		        android:layout_alignBaseline="@+id/helpLabel"
    		        android:layout_alignBottom="@+id/helpLabel"
    		        android:layout_alignParentRight="true"
    		        android:text="@string/help_help" />

    		</RelativeLayout>

		</ScrollView>	

</RelativeLayout>