<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/main_menu_show_log" 
          android:enabled="true" 
          android:title="@string/main_menu_show_log" 
          android:visible="true" 
          android:icon="@drawable/ic_menu_agenda">
    </item>
    
    <item android:id="@+id/main_menu_set_number" 
          android:enabled="true" 
          android:title="@string/main_menu_set_number" 
          android:visible="true" 
          android:icon="@drawable/ic_menu_manage">
    </item>
    
    <item android:id="@+id/main_menu_redetect_wifi" 
          android:enabled="true" 
          android:title="@string/main_menu_redetect_wifi" 
          android:visible="true" 
          android:icon="@drawable/ic_menu_refresh">
    </item>
   
</menu>